# ai-app-backend

./: .env.example  .gitignore  README.md  pyproject.toml  stdeb.cfg
.fleet/: settings.json
scripts/: ai-service.service  run.sh
src/app/: mq.py  start.py  test_local_draw.py  variables.py
src/app/handlers/: factory.py  unknown.py
src/app/handlers/draw/: draw_handler.py
